# telegram-sticker-search-bot-lambda

./: .editorconfig  .gitignore  Cargo.toml  flake.nix  template.yaml
func/: Cargo.toml
func/src/: main.rs
testdata/: func.json
