[package]
name = "func"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lambda_runtime = "0.5"
lambda_http = "0.5"
http = "0.2"

tokio = { version = "1.19", features = ["full"] }

anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
] }
